// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code <Code /> size 300 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 8px;
border-bottom-right-radius: 8px;
border-top-left-radius: 8px;
border-top-right-radius: 8px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 11.2px;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
letter-spacing: 0;
line-height: 16px;
line-height: 23px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


<code
  className="ub-fnt-sze_11-2px ub-f-wght_400 ub-ln-ht_16px ub-ltr-spc_0 ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_8px ub-bbrr_8px ub-btlr_8px ub-btrr_8px ub-box-szg_border-box"
>
  Text 300
</code>
`;

exports[`Code <Code /> size 300 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 11.2px;
font-weight: 400;
letter-spacing: 0;
line-height: 16px;


<code
  className="ub-fnt-sze_11-2px ub-f-wght_400 ub-ln-ht_16px ub-ltr-spc_0 ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box"
>
  Text 300
</code>
`;

exports[`Code <Code /> size 400 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 8px;
border-bottom-right-radius: 8px;
border-top-left-radius: 8px;
border-top-right-radius: 8px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


<code
  className="ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_8px ub-bbrr_8px ub-btlr_8px ub-btrr_8px ub-box-szg_border-box"
>
  Text 400
</code>
`;

exports[`Code <Code /> size 400 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;


<code
  className="ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box"
>
  Text 400
</code>
`;

exports[`Code <Code /> size 500 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 8px;
border-bottom-right-radius: 8px;
border-top-left-radius: 8px;
border-top-right-radius: 8px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 17.5px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


<code
  className="ub-fnt-sze_17-5px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_8px ub-bbrr_8px ub-btlr_8px ub-btrr_8px ub-box-szg_border-box"
>
  Text 500
</code>
`;

exports[`Code <Code /> size 500 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 17.5px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 23px;


<code
  className="ub-fnt-sze_17-5px ub-f-wght_400 ub-ln-ht_23px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box"
>
  Text 500
</code>
`;

exports[`Code <Code /> size 600 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 8px;
border-bottom-right-radius: 8px;
border-top-left-radius: 8px;
border-top-right-radius: 8px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 21.88px;
font-weight: 400;
letter-spacing: -0.07px;
line-height: 28px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


<code
  className="ub-fnt-sze_21-88px ub-f-wght_400 ub-ln-ht_28px ub-ltr-spc_-0-07px ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_8px ub-bbrr_8px ub-btlr_8px ub-btrr_8px ub-box-szg_border-box"
>
  Text 600
</code>
`;

exports[`Code <Code /> size 600 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 21.88px;
font-weight: 400;
letter-spacing: -0.07px;
line-height: 28px;


<code
  className="ub-fnt-sze_21-88px ub-f-wght_400 ub-ln-ht_28px ub-ltr-spc_-0-07px ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box"
>
  Text 600
</code>
`;
